Fixed custom option dropdown option missaligned

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
@@ -192,6 +192,16 @@
 //  Label
 //  ---------------------------------------------
 
+td {
+    >.admin__field {
+        &:not(.admin__field-option) {
+            >.admin__field-label {
+                display: none;
+            }
+        }
+    }
+}
+
 .admin__field-label {
     color: @field-label__color;
     margin: 0;
